# music

./: .env.example  .env.production.example  .gitignore  Makefile  README.md  docker-compose.prod.yml  docker-compose.yml  render.yaml
.claude/skills/: CLAUDE.md
.githooks/: pre-push
.github/workflows/: ci.yml  ingest-tests.yml
backend/: .dockerignore  Dockerfile  docker-entrypoint.sh  pyproject.toml
backend/.cache/deno/: dep_analysis_cache_v2-shm  dep_analysis_cache_v2-wal  node_analysis_cache_v2-shm  node_analysis_cache_v2-wal
backend/.cache/yt-dlp/youtube-sigfuncs/: 4f38b487-main-105.json  4f38b487-main-109.json  5cabb421-main-104.json  5cabb421-main-108.json
backend/.doppler/fallback/: .metadata-ce8b829909f289d77224ba275acea76ff0dcbd98a2ec417b5f6dbf87c4543479.json  .secrets-ce8b829909f289d77224ba275acea76ff0dcbd98a2ec417b5f6dbf87c4543479.json
backend/apps/catalog/: admin.py  collab.py  consumers.py  match.py  models.py  realtime.py  routing.py  serializers.py  services.py  streaming.py  urls.py  views.py
backend/apps/catalog/ingest/: applemusic.py  applemusic_web.py  normalize.py  spotify.py  spotify_web.py  youtube.py
backend/apps/catalog/management/commands/: ingest_apple.py  match_youtube.py  spotify_authorize.py
backend/apps/catalog/migrations/: 0001_initial.py  0002_seed_sources.py  0003_alter_playlistimport_playlist.py  0004_track_album_name_track_artwork_url_track_is_explicit_and_more.py  0005_track_source_url.py  0006_playlist_artwork_url.py  0007_playlist_origin_snapshot_id_sourceplaylist_and_more.py  0007_spotifyauth.py  0008_sourceplaylist_url.py  0009_playlistactivity_playlistcollaborator.py  0010_alter_playlist_created_by.py
backend/apps/catalog/tests/: factories.py  test_api.py  test_applemusic_parser.py  test_collab.py  test_ingest_service.py  test_match.py  test_playlist_consumer.py  test_rls.py  test_streaming_cache.py  test_youtube_cookiefile.py
backend/apps/core/: apps.py  channels_auth.py  consumers.py  encryption.py  mfa_encryption.py  middleware.py  models.py  rls.py  rls_context.py  signals.py
backend/apps/core/management/commands/: ensure_admin.py  seed.py
backend/apps/core/migrations/: 0001_encrypt_mfa_secrets.py  0002_drop_notes_table.py
backend/apps/core/tests/: test_canonical_auth_host_middleware.py  test_require_verified_email_middleware.py  test_staff_mfa_middleware.py
backend/apps/friends/: admin.py  models.py  serializers.py  services.py  urls.py  views.py
backend/apps/friends/migrations/: 0001_initial.py
backend/apps/friends/tests/: test_friends.py
backend/apps/jobs/: models.py  serializers.py  urls.py  views.py  workflows.py
backend/apps/jobs/management/commands/: hatchet_worker.py
backend/apps/jobs/migrations/: 0001_initial.py
backend/apps/notes/: admin.py  models.py  serializers.py  urls.py  views.py
backend/apps/notes/migrations/: 0001_initial.py
backend/apps/notes/tests/: factories.py  test_rls.py
backend/apps/notifications/: admin.py  consumers.py  events.py  models.py  serializers.py  urls.py  views.py
backend/apps/notifications/migrations/: 0001_initial.py  0002_alter_notification_kind.py  0003_alter_notification_kind.py  0004_alter_notification_kind.py
backend/apps/notifications/tests/: test_notifications.py
backend/apps/rooms/: broadcast.py  consumers.py  coordination.py  models.py  routing.py  serializers.py  services.py  snapshot.py  urls.py  views.py
backend/apps/rooms/migrations/: 0001_initial.py  0002_remove_queueitem_rooms_queue_room_id_b4e783_idx_and_more.py  0003_remove_queueitem_rooms_queue_room_id_d561cc_idx_and_more.py  0004_remove_queueitem_rooms_queue_room_id_b4e783_idx_and_more.py  0005_roommember_playbackstate_generation_and_more.py  0006_playbackstate_pending_start.py  0007_playbackstate_next_shuffle_seed.py  0008_playbackstate_start_deadline.py
backend/apps/rooms/tests/: test_api.py  test_broadcast.py  test_consumer.py  test_jam.py  test_queue.py  test_synced_start.py
backend/apps/users/: adapter.py  admin.py  invites.py  models.py  urls.py  views.py
backend/apps/users/migrations/: 0001_initial.py  0002_invitation.py  0003_invitation_token_hash.py  0004_invite_only_switch.py  0005_seed_bootstrap_invite.py  0006_brand_site.py
backend/apps/users/tests/: factories.py  test_account_pages.py  test_invites.py  test_username_and_social.py  test_welcome.py
backend/config/: asgi.py  routing.py  urls.py  wsgi.py
backend/config/settings/: base.py  dev.py  prod.py
backend/templates/account/: _base_page.html  invite_landing.html  password_reset_page.html  verify_email_result.html
backend/templates/account/email/: _button.html  account_already_exists_message.html  base_message.html  base_message.txt  base_notification.html  email_changed_message.html  email_confirmation_message.html  email_confirmation_message.txt  email_confirmation_subject.txt  email_deleted_message.html  invitation_message.html  password_changed_message.html  password_reset_key_message.html  password_set_message.html  unknown_account_message.html
backend/tests/: conftest.py
desktop/: .gitignore  README.md  package.json
desktop/scripts/: fetch-sidecars.sh
desktop/src-tauri/: Cargo.toml  build.rs  entitlements.plist  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/src/: lib.rs
docs/: README.md  architecture.md  auth.md  data-model.md  decisions.md  frontend.md  jobs.md  ops.md  permissions.md  rls.md  tauri-migration.md
docs/architecture/: nginx.md
docs/decisions/: 0001-rls-day-one.md  0002-hatchet-lite-over-celery.md  0003-allauth-headless.md  0004-tanstack-router.md  0005-render-first-deploy.md  0006-mfa-optional-staff-required.md  0007-dev-branch-staging.md  0009-trunk-based-main-only.md  (+1 more)
frontend/: .env.desktop  .gitignore  .npmrc  .prettierignore  .prettierrc  Dockerfile  eslint.config.js  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  vite.config.ts
home-proxy/: .env.example  Makefile  README.md  docker-compose.yml  print-proxy-url.sh
nginx/: nginx.dev.conf  nginx.prod.conf
postgres/: init.sql
scripts/: ingest_applemusic.py
(+175 files in other folders)
