[project]
name = "backend"
version = "0.1.0"
description = "Django backend for music project"
requires-python = ">=3.14"
dependencies = [
    # Django 5.2 is the current LTS — security + data-loss fixes through
    # April 2028. We pin to the LTS line (not the latest feature release)
    # because a template gets cloned and left alone; the LTS maximizes the
    # patch window for everything built on it. See docs/decisions.md.
    "django>=5.2,<6.0",
    "djangorestframework>=3.16",
    "django-allauth[socialaccount,mfa]>=65.17",
    "fido2>=1.2",
    "qrcode>=8.0",
    "django-rls>=0.4",
    "drf-spectacular>=0.28",
    # Serves Swagger UI's JS/CSS from our own /static/ instead of a CDN, so a
    # strict CSP (script-src 'self') doesn't have to allow an external origin.
    "drf-spectacular-sidecar>=2024.7.1",
    "django-filter>=25.1",
    "django-anymail>=13.0",
    "django-extensions>=4.1",
    "django-guid>=3.6",
    "django-axes>=8.0",
    "django-ratelimit>=4.1",
    "django-waffle>=4.2",
    "django-health-check>=4.4",
    "django-pghistory>=3.5",
    "django-pgtrigger>=4.13",
    "django-csp>=4.0",
    "django-permissions-policy>=4.25",
    "sentry-sdk[django]>=2.0",
    "psycopg[binary]>=3.2",
    "dj-database-url>=2.3",
    "django-environ>=0.12",
    "django-cors-headers>=4.9",
    "whitenoise>=6.8",
    "gunicorn>=23.0",
    "pwned-passwords-django>=5.2.0",
    # Resolves a track to a YouTube video + extracts audio (needs ffmpeg + deno at
    # runtime). The [default] extra bundles yt-dlp's recommended deps: the
    # yt-dlp-ejs JS-challenge solver (so we don't fetch it at runtime) AND curl_cffi
    # for browser-TLS impersonation (helps dodge YouTube's bot detection), plus
    # pycryptodomex/requests/etc. Bump frequently — a stale yt-dlp breaks as YouTube
    # changes, and yt-dlp-ejs must track yt-dlp.
    "yt-dlp[default,curl-cffi]>=2025.1",
    # yt-dlp plugin that fetches YouTube PO tokens from the bgutil-provider sidecar
    # (docker-compose). Keep the plugin + the sidecar image version in lockstep.
    "bgutil-ytdlp-pot-provider>=1.3,<2",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-django>=4.11",
    "pytest-cov>=6.0",
    "ruff>=0.13",
    "django-debug-toolbar>=6.0",
    "django-stubs[compatible-mypy]>=5.2",
    "djangorestframework-stubs>=3.16",
    "factory-boy>=3.3",
    "Faker>=37.0",
]

[tool.ruff]
target-version = "py314"
line-length = 100
extend-exclude = ["migrations"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
    "DJ",  # flake8-django
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.ruff.lint.per-file-ignores]
"**/settings/*.py" = ["F405", "F403"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings.dev"
python_files = ["test_*.py", "*_test.py", "tests.py"]
addopts = "-ra --strict-markers"
testpaths = ["tests", "apps"]
